Refix Horizontal scrollbar - stop overflow

--- a/style.css
+++ b/style.css
@@ -10,17 +10,6 @@ body {
   max-width: 100%;
 }
 
-body {
-  overflow-x: hidden;
-}
-.hidden-thing {
-  position: absolute;
-  left: 100%;
-  width: 50px;
-  height: 50px;
-  opacity: 0;
-}
-
 .fixedtopbar
 {
     position: fixed;
@@ -97,11 +86,12 @@ want to move it down
 }
 
 section {
-    width: 100%;
-    margin: 2%;
     display: inline-block;
     background: white;
     color: mediumaquamarine;
+    margin-left: 2em;
+    margin-right: 2em;
+    
 }
 
 #map {
@@ -231,11 +221,11 @@ want to move it down
 }
 
 section {
-    width: 100%;
-    margin: 2%;
     display: inline-block;
     background: white;
     color: mediumaquamarine;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 
 #map {
@@ -351,11 +341,11 @@ want to move it down
 }
 
 section {
-    width: 100%;
-    margin: 2%;
     display: inline-block;
     background: white;
     color: mediumaquamarine;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 
 #map {
